# voidFinderProject

./: .gitignore  .gitmodules  .header-template  LICENSE.txt  MANIFEST.in  README.md  cleaner_cbl.cpp  dependencies.md  pipeline_popcorn.py  pipeline_svf_pop.py  pyproject.toml  requirements.txt  script_zobov.py  setup.cfg  setup.py  tox.ini
.github/workflow/: ci.yml
.github/workflows/: ci.yml
Tools/: box_tools.py  classes.py
docs/: conf.py  requirements.txt
docs/_build/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/reference/: modules.rst  voidfindertk.core.box.rst  voidfindertk.core.center_finder.rst  voidfindertk.core.cleaners.rst  voidfindertk.core.radius_finder.rst  voidfindertk.core.rst  voidfindertk.core.vfinder_abc.rst  voidfindertk.core.vgcf.rst  voidfindertk.core.voids.rst  voidfindertk.datasets.rst  voidfindertk.rst  voidfindertk.utils.accabc.rst  voidfindertk.utils.bunch.rst  voidfindertk.utils.context_managers.rst  voidfindertk.utils.rst  voidfindertk.zobov.rst
draft/: _methods.py  _zobov.py  lectura_zones_in_void.cpp  notes.txt  popcorn_old.py  save_file_from_box.py  script.py  script2.py  tests_old.py  to_do.txt  tools_old.py
draft/scripts/: script_analyze_reff_zobov.py  script_build_multiple_plots.py  script_compare_tools_svf.py  script_find_tracers.py  script_plots.py  script_re_run_popcorn.py  script_runz.py  script_test_boxes.py  script_try_dive.py  script_try_real_popcorn.py  script_try_svf_popcorn.py  script_try_zobov.py
examples/: zobov_model.py  zobov_tutorial.ipynb
src/: __init__.py  box.py  main_io.py
src/Tools/: dataset.txt  tools.py
src/voidFinderToolkit/: box.py
src/voidFinderToolkit.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  _test_spheric.py  conftest.py  pipeline.py  test_box.py  test_comparison_tools.py  test_io.py  test_pipeline.py  test_popcorn_tools.py  test_read_table.py  test_settings.py  test_spherical_tools.py  test_tools.py  test_vsf.py  test_wrapper.py  test_zobov_tools.py
tests/core/: test_box.py  test_center_finder.py  test_cleaners.py  test_plot_acc.py  test_radius_finder.py  test_vfinder_abc.py  test_vgcf.py  test_voids.py  test_vsf.py
tests/datasets/: __init__.py  data_random_1.txt  data_random_2.txt  data_random_3.txt  test_spherical_cloud.py
tests/popcorn/: test_pc_postprocessing.py  test_pc_wrapper.py  test_popcorn.py  test_wrapper.py
tests/svf_popcorn/: test_svf_pc_postprocessing.py  test_svf_pc_wrapper.py  test_svf_popcorn.py
tests/utils/: test_accabc.py  test_box_to_grid.py  test_bunch.py  test_context_managers.py  test_make_workdir.py
tests/zobov/: test_wrapper.py  test_zb_postprocessing.py  test_zb_wrapper.py  test_zobov.py
tmpl48wp2ngcbl_cleaner/: cleaned_catalogue_zobov_barycentre.txt  input_xyz_rad.txt
tmps_owhr5ncbl_cleaner/: cleaned_catalogue_zobov_core_particle.txt  input_xyz_rad.txt
tools/: classes.py
voidFinderToolkit/: box.py  io.py  main_io.py
voidFinderToolkit.egg-info/: SOURCES.txt  top_level.txt
voidfinder_tk/: box.py  tools.py
voidfinder_tk/finders/: spheric.py
voidfindertk/: __init__.py  analysis_tools.py  box.py  comparison_tools.py  data_box.py  io.py  io_popcorn.py  models.py  pipeline_popcorn.py  popcorn_tools.py  script.py  settings.py  setup.py  spherical_classifier.py  spherical_interface.py  spherical_tools.py  spherical_vf.py  spherical_voids.py  tools.py  vfinder_abc.py  voids.py  zobov_tools.py
voidfindertk/core/: Makefile  __init__.py  box.py  center_finder.py  cleaners.py  plot_acc.py  radius_finder.py  vfinder_abc.py  vgcf.py  voids.py  vsf.py
voidfindertk/datasets/: spherical_cloud.py
voidfindertk/dive/: Makefile  __init__.py  _dive.py  _postprocessing.py  _processing.py  cleaner.cpp
voidfindertk/io/: __init__.py  read_table.py
voidfindertk/popcorn/: __init__.py  _pc_postprocessing.py  _pc_wrapper.py  _popcorn.py  _postprocessing.py  _wrapper.py
voidfindertk/popcorn/popcorn_void_finder/: CMakeLists.txt
voidfindertk/popcorn/popcorn_void_finder/Example/: abundance.py  abundance.r
voidfindertk/popcorn/popcorn_void_finder/Source/: allvars.cpp  arvo_functions.h  clean_duplicates.cpp  popcorn.cpp  t.h
voidfindertk/popcorn/popcorn_void_finder/Source/configuration_lib/: converter.h  meson.build  string_tools.cpp  variables_manager.cpp
voidfindertk/popcorn/popcorn_void_finder/Source/io_lib/: io_tracers_ascii.h  io_tracers_hdf5.cpp  io_tracers_hdf5.h  meson.build
voidfindertk/popcorn/popcorn_void_finder/Source/tests/: test_comm.cpp
voidfindertk/popcornvf/: popcorn_tools.py
voidfindertk/spherical/: __init__.py  allvars.h  pipeline_vf.cc  spherical_interface.py
voidfindertk/spherical2/: __init__.py  _scvf.py  _wrapper.py
voidfindertk/sphericalvf/: spherical_tools.py
voidfindertk/svf_popcorn/: __init__.py  _postprocessing.py  _svf_pc_postprocessing.py  _svf_pc_wrapper.py  _svf_popcorn.py  _wrapper.py
voidfindertk/svf_popcorn/popcorn_void_finder/Source/: .clang-format  Makefile  arvo_functions.cpp  arvo_tools.cpp  arvo_variables_tools.cpp  arvo_variables_tools.h  clean_duplicates_run.cpp  colors.h  comm.cpp  comm.h  compute_intersecs.cpp  compute_intersecs.h  compute_intersecs_run.cpp  finder.cpp  finder.h  grid.h  grid.tpp  mensaje.h  meson.build  objects.cpp  objects.h  popcorn.h  popcorn_app.cpp  popcorn_run.cpp  svf.h  svf_run.cpp  template_popcorn.h  template_popcorn.tpp
voidfindertk/svf_popcorn/popcorn_void_finder/Source/configuration/: vars.conf
voidfindertk/svf_popcorn/popcorn_void_finder/Source/configuration_lib/: README  converter.cpp  string_tools.h  variable_control.h  variables_loader.cpp  variables_loader.h  variables_tools.cpp
voidfindertk/svf_popcorn/popcorn_void_finder/Source/io_lib/: io.cpp  io_tracers_ascii.cpp  io_tracers_stream.cpp  io_tracers_stream.h
voidfindertk/svf_popcorn/popcorn_void_finder/Source/tests/: meson.build  test_mpi_main.cpp
voidfindertk/utils/: __init__.py  accabc.py  box_to_grid.py  bunch.py  config_file_maker.py  context_managers.py  create_run_working_directory.py  make_workdir.py  vsf.py  (+1 more)
(+160 files in other folders)
