[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["voidfindertk", "voidfindertk.*"]
exclude = ["spherical", "spherical.*"]
namespaces = false

[project]
name = "voidfindertk"
description = "A package to compare void finders"
version = "0.0.1"
readme = "README.md"
dependencies = ["numpy","pandas","scipy","attrs","uttrs","sh","astropy"]
authors = [
    {name = "Federico Bustillos", email = "jorgefedericobustillosrava@gmail.com"},
    {name = "Sebastian Gualpa", email = "srgualpa@unc.edu.ar"}]
license = {file = "LICENSE.txt"}

keywords = [
    "void finder",
    "astronomy",
    "large scale structure",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

urls = { Repository = "https://github.com/FeD7791/voidFinderProject.git" }
