[metadata]
name = voidFinderToolkit 
version = 0.0.1
author = Federico Bustillos 
author_email = jorgefedericobustillosrava@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers = License :: OSI Approved :: MIT License

[options]
package_dir = =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude = test*