[metadata]
name = voidfindertk
version = 0.0.1
author = 
    Federico Bustillos 
    Sebastian Gualpa
author_email = jorgefedericobustillosrava@gmail.com
description = A void finder algorithm that can implement disctinct void finder methods
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers = 
    License :: OSI Approved :: MIT License
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering

url = https://github.com/FeD7791/voidFinderProject.git

[options]
package_dir = =voidfindertk
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires = 
    uttrs
    astropy 
    pandas
[options.packages.find]
where = voidfindertk
exclude = test*